fix v alignement
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoItems/trunk@10288 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/qtiAuthoring.css
+++ b/views/css/qtiAuthoring.css
@@ -38,7 +38,7 @@ div.xhtml_form div.file-uploader .uploadifyProgress, .uploadifyProgress {width: 
 .ui-accordion .ui-accordion-header a {padding: 0 0 0 2.2em;font-weight: bold;}
 
 /*html area for the prompt input fields*/
-div.xhtml_form div textarea{width: 63%;}
+div.xhtml_form div textarea{width: 63%; vertical-align: top;}
 div.xhtml_form div div.wysiwyg{	width: 63% !important;}
 div.xhtml_form div div.wysiwyg iframe, div.xhtml_form div div.wysiwyg iframe html{width: 100% !important;}
 
